[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kilvin"
version = "0.1"
authors = [
  { name="Pratham Singh", email="prathms007@gmail.com" },
]
description = "A minimal static site generator."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["static site generator", "markdow"]
dependencies = [
    "markdown",
    "Jinja2",
    "tomli",
    "python-frontmatter",
    "livereload",
]
[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
"Homepage" = "https://github.com/shanukun/kilvin"
"Bug Tracker" = "https://github.com/shanukun/kilvin/issues"

[project.scripts]
kilvin = "kilvin.__main__:main"
